Fix margin issue on product carousel PDP on mobile

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -16,12 +16,6 @@ slider-component.slider-component-full-width {
   --desktop-margin-left-first-item: 1.5rem;
 }
 
-@media screen and (max-width: 749px) {
-  slider-component.page-width {
-    padding: 0 1.5rem;
-  }
-}
-
 @media screen and (min-width: 749px) and (max-width: 990px) {
   slider-component.page-width {
     padding: 0 5rem;
@@ -50,9 +44,7 @@ slider-component.slider-component-full-width {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    scroll-padding-left: 1.5rem;
     -webkit-overflow-scrolling: touch;
-    margin-bottom: 1rem;
   }
 
   /* Fix to show some space at the end of our sliders in all browsers */
@@ -69,6 +61,7 @@ slider-component.slider-component-full-width {
       var(--focus-outline-padding),
       var(--shadow-padding-bottom)
     );
+    width: 100%;
   }
 
   .slider.slider--mobile.contains-card--standard
